Image Picker for D6 in 6.x-2.x, 20011-07-21
------------------------------------
by hutch, changed function names containing '_process'

Image Picker for D6 in 6.x-2.x, 20011-06-17
------------------------------------
by hutch, added defaults for image styles

Image Picker for D6 in 6.x-2.x, 20011-06-13
------------------------------------
by hutch, added jpeg quality to upload form

Image Picker for D6 in 6.x-2.x, 20011-06-12
------------------------------------
by hutch, fixed jpeg quality bug, #1036216

Image Picker for D6 in 6.x-2.x, 20011-06-11
------------------------------------
by hutch, fixed currentgroup bug, #1185406

Image Picker for D6 in 6.x-2.x, 20011-06-08
------------------------------------
by hutch, added rel for colorbox support

Image Picker for D6 in 6.x-2.x, 20011-06-06
------------------------------------
by hutch, added imagecache support

Image Picker for D6 in 6.x-2.x, 20011-06-03
------------------------------------
by hutch, added reallocate feature

Image Picker for D6 in 6.x-2.x, 20011-04-22
------------------------------------
by hutch, added insert template

Image Picker for D6 in 6.x-2.x, 20011-03-31
------------------------------------
by hutch, cleanup for new release

Image Picker for D6 in 6.x-2.x, 20011-03-27
------------------------------------
by hutch, removed all arg(), fixed bug in public_roles
  fixed bug in iframe js for tinymce

Image Picker for D6 in 6.x-2.x, 20011-03-17
------------------------------------
by hutch, added multiple uploads

Image Picker for D6 in 6.x-2.x, 20011-03-06
------------------------------------
by hutch, moved some functions back to imagepicker.module

Image Picker for D6 in 6.x-2.x, 20011-03-04
------------------------------------
by hutch, various fixes to private download support

Image Picker for D6 in 6.x-2.x, 20011-03-03
------------------------------------
by hutch, added private download support,
  #1079540 patch by klflote

Image Picker for D6 in 6.x-2.x, 20011-02-27