@@ -1,3 +1,7 @@
+Image Picker for D6 in 6.x-2.x, 20011-07-212
+------------------------------------
+by hutch, added image title option
+
 Image Picker for D6 in 6.x-2.x, 20011-07-21
 ------------------------------------
 by hutch, changed function names containing '_process'
